refactor: Backend SOLID architectural refactoring (Controllers, UseCases, Services)